--- a/pom.xml
+++ b/pom.xml
@@ -78,17 +78,13 @@
             <version>1.10.19</version>
             <scope>test</scope>
         </dependency>
+
+        <!--Does automatic configuration of OpenTracing tracer. NoopTracer is by default-->
         <dependency>
             <groupId>io.opentracing.contrib</groupId>
-            <artifactId>opentracing-spring-cloud-starter</artifactId>
-            <version>0.0.1</version>
+            <artifactId>opentracing-spring-web-autoconfigure</artifactId>
+            <version>0.0.10</version>
         </dependency>
-        <dependency>
-            <groupId>com.instana</groupId>
-            <artifactId>instana-java-opentracing</artifactId>
-            <version>0.30.1</version>
-        </dependency>
-
     </dependencies>
 
     <build>
@@ -140,6 +136,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <mainClass>de.zalando.zmon.scheduler.ng.Application</mainClass>
+                    <layout>ZIP</layout>
                 </configuration>
             </plugin>
 
