--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,19 @@
             <artifactId>tokens</artifactId>
             <version>0.11.0-beta-2</version>
         </dependency>
+
+        <!-- Distributed Tracing -->
+        <dependency>
+            <groupId>org.zalando</groupId>
+            <artifactId>tracing-lightstep-spring-boot-starter</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.opentracing.contrib</groupId>
+            <artifactId>opentracing-spring-cloud-starter</artifactId>
+            <version>0.1.0</version>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
